--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -2312,7 +2312,7 @@ As another example, we can show that the $\fun{map}$ function
 satisfies the two functor laws:
 \begin{align*}
 \fun{map}\ \fun{id} &= \fun{id} & \text{(identity law)} \\
-\fun{map}\ (g\ .\ h) &= \fun{map}\ g\ . \ h & \text{(composition law)}
+\fun{map}\ (g\ .\ h) &= \fun{map}\ g\ . \ \fun{map}\ h & \text{(composition law)}
 \end{align*}
 
 The first law is straightforward to prove:
