--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -219,27 +219,37 @@ much easier to get these definitions from the library instead!
 
 \subsection{Installing Agda}
 
-There are several ways to install Agda, but unfortunately none are
-very fast and simple. Here we describe how to install Agda from source
-using Stack.\footnote{Instructions for installing Stack can be found
-on \hrefu{https://docs.haskellstack.org/en/stable/README/}{docs.haskellstack.org/en/stable/README}.} Other ways
-to install Agda can be found at
+To follow the rest of these notes, it is recommended that you use Agda
+version 2.6.0 or later. There are several ways to install Agda.
+\begin{description}
+  \item[Agda Language Server for VS Code.] The easiest way is to first
+  install Visual Studio
+  Code\footnote{\hrefu{https://code.visualstudio.com/}{code.visualstudio.com}}
+  and the Agda Mode
+  plugin\footnote{https://github.com/banacorn/agda-mode-vscode} and
+  then enable `agdaMode.connection.agdaLanguageServer` in the
+  settings. This will automatically download a suitable version of
+  Agda the first time you load an Agda file.
+
+  \item[Ubuntu package.] On Ubuntu Linux and similar systems (including
+  WSL\footnote{\hrefu{https://docs.microsoft.com/en-us/windows/wsl/install-win10}{docs.microsoft.com/en-us/windows/wsl/install-win10}}
+  on Windows) you can install a binary release of Agda by
+  running `\texttt{sudo apt install agda-mode}`.
+
+  \item[Installation from source using Stack.] It is also possible to
+  install Agda from source using Stack.\footnote{Instructions for
+  installing Stack can be found on
+  \hrefu{https://docs.haskellstack.org/en/stable/README/}{docs.haskellstack.org/en/stable/README}.}
+  The following command should install the latest release of Agda:
+  \begin{verbatim}
+  stack install Agda
+  \end{verbatim}
+  This step will take a long time and a lot of memory to complete, and
+  use up 4-5 GB of disk space for a fresh install.
+\end{description}
+
+Other ways to install Agda can be found at
 \hrefu{https://agda.readthedocs.io/en/latest/getting-started/installation.html}{agda.readthedocs.io/en/latest/getting-started/installation.html}.
-To follow the rest of these notes, it is recommended that you use
-Agda version 2.6.0 or later.
-
-Assuming you have Stack installed, the following command should install the
-latest release of Agda:
-\begin{verbatim}
-stack install Agda-2.6.1.3
-\end{verbatim}
-This step will take a long time and a lot of memory to complete, and
-use up 4-5 GB of disk space for a fresh install.
-
-On Ubuntu Linux and similar systems (including
-WSL\footnote{\hrefu{https://docs.microsoft.com/en-us/windows/wsl/install-win10}{docs.microsoft.com/en-us/windows/wsl/install-win10}}
-on Windows) you can alternatively install a binary release by running
-`\texttt{sudo apt install agda}`.
 
 To write and edit Agda code, we recommend Visual Studio Code with the
 \texttt{agda-mode} extension.\footnote{You can get Visual Studio Code
