Add a hint for exercise 2.6 on converting between List and List'

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -1263,6 +1263,7 @@ List' A = Σ Nat (Vec A)
 \begin{exercise}
 Implement functions converting back and forth
 between $\List\ A$ and $\data{List'}\ A$.
+\textbf{Hint.} First define the functions $\fun{[]'} : \{A : \ty{}\} \to \fun{List'}~A$ and $\fun{\_::'\_} : \{A : \ty{}\} \to A \to \fun{List'}~A \to \fun{List'}~A$.
 \end{exercise}
 }
 
