--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -1154,7 +1154,7 @@ $\var{n}$ has to be $\zero$. But if $\var{n}$ is $\zero$, then
 $\var{i}$ has type $\Fin\ \zero$. Agda then checks all constructors of
 the $\Fin$ type, and sees that none of them can be used to construct
 an element of type $\Fin\ \zero$. Hence the case where the input vector
-is $\con{[]} is really impossible.}
+is $\con{[]}$ is really impossible.}
 
 We can now split on the position $i$:
 \begin{code}[hide]
